# aneya-backend

./: .gitignore  BACKEND_SERVER_INVESTIGATION.md  CONSULTATION_TYPE_FIX.md  CUSTOM_FORMS_INTEGRATION.md  DEPLOYMENT_FIXES_2026-01-06.md  DEPLOYMENT_SAFETY_GUIDE.md  DIARIZATION_ARCHITECTURE.md  Dockerfile  FORM_AUTOFILL_COMPLETE.md  FORM_EXTRACTION_ENHANCEMENTS.md  FORM_ORGANIZATION.md  FORM_TABLE_CLASSIFICATION_SUMMARY.md  GET_FIREBASE_TOKEN.md  IMG_1936.HEIC  IMG_1937.HEIC  OBGYN_FORMS_API.md  OBGYN_FORMS_ARCHITECTURE.md  OBGYN_FORMS_INDEX.md  OBGYN_FORMS_QUICK_REFERENCE.md  OBGYN_IMPLEMENTATION_SUMMARY.md  OBGYN_SETUP_GUIDE.md  PATIENT_CONTEXT_FORM_FILLING.md  README.md  SARVAM_API_KEY_FIX.md  SARVAM_CONNECTION_FIX.md  SHARED_HEALTH_RECORDS.md  SPEAKER_MATCHING_EXPLAINED.md  TESTING_DIARIZATION.md  TESTING_RESULTS.md  TESTING_SPEC.md  TEST_PRESCRIPTION_EXTRACTION.md  TODO_AUTH.md  api.py  api.py.bak  build_react_bundle.py  check_appointment_status.py  cloudbuild.yaml  config.py  custom_forms_api.py  demo_two_box_ui.py  (+39 more)
aneya-backend/: test_chunked_diarization.py  test_full_chunked.py
api/: README.md
bnf_proxy_test/: Dockerfile  app.py
chunked_test_output/: chunk-00.webm  chunk-01.webm  chunk-02.webm  chunk-03.webm  chunk-04.webm  full_test_results.json  merged_transcript.txt  simple_test_results.json
clients/: __init__.py  figma_mcp_client.py
historical_forms/: __init__.py  conflict_detector.py  form_data_extractor.py  pdf_processor.py
mcp_servers/: field_validator.py  form_schemas.py  form_schemas.py.backup
migrations/: 001_create_obgyn_forms_table.sql  002_create_shared_health_record_tables.sql  003_add_bleeding_pattern_fields.sql  004_add_normal_bleeding_pattern_fields.sql  005_create_patient_demographics.sql  006_create_field_definitions.sql  007_update_appointments_specialty.sql  008_create_infertility_forms.sql  010_create_antenatal_forms.sql  (+19 more)
(+127 files in other folders)
